# hybrid-search

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/api/: api.py  es.py  search.py
backend/docker/: docker-compose.yml
backend/infra/: create_index.py
backend/ingestion/: ingestion.py
frontend/: README.md  package.json
frontend/src/: App.js  index.css
